--- a/AndroidUIComponent/app/src/main/res/layout/activity_popup.xml
+++ b/AndroidUIComponent/app/src/main/res/layout/activity_popup.xml
@@ -20,4 +20,53 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"/>
 
+    <TextView
+        android:id="@+id/tv_cp_notes1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Abcd Efghi Jklmn Opqr stuv"
+        android:textSize="16sp"
+        android:textColor="#000"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        android:lineSpacingExtra="5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_popup_window"/>
+
+    <CheckBox
+        android:id="@+id/cb_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Say, Hello"
+        android:textColor="@color/check_box_selector"
+        android:enabled="false"
+        android:theme="@style/checkbox_theme"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ImageView
+        android:id="@+id/iv_test1"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/ic_preview"
+        android:scaleType="fitXY"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ImageView
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/ic_color_filter"
+        android:scaleType="fitXY"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/iv_test1"
+        app:layout_constraintRight_toRightOf="parent"/>
 </android.support.constraint.ConstraintLayout>
