--- a/AndroidUIComponent/app/src/main/res/layout/activity_sliding_up_panel.xml
+++ b/AndroidUIComponent/app/src/main/res/layout/activity_sliding_up_panel.xml
@@ -3,19 +3,62 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.demo.nahidul.androiduicomponent.SlidingUpPanelActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Under Construction Activity"
-        android:textSize="24sp"
-        android:textColor="#ff0000"
+        android:id="@+id/tv_slider"
+        android:layout_width="0dp"
+        android:layout_height="36dp"
+        android:text="Click To Slide"
+        android:textSize="16sp"
+        android:textColor="#003663"
+        android:fontFamily="sans-serif-medium"
+        android:layout_margin="16dp"
+        android:gravity="center"
+        android:background="@drawable/cursor_drawable"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/supl"
+        android:gravity="top"
+        android:layout_marginTop="0dp"
+        sothree:umanoPanelHeight="0dp"
+        sothree:umanoShadowHeight="4dp"
+        sothree:umanoParallaxOffset="100dp"
+        sothree:umanoDragView="@id/cl_slidend"
+        sothree:umanoOverlay="true"
+        app:layout_constraintLeft_toLeftOf="@id/tv_slider"
+        app:layout_constraintRight_toRightOf="@id/tv_slider"
+        app:layout_constraintTop_toBottomOf="@id/tv_slider"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:id="@+id/main_content"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/tv_title_click_event"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="#003663"
+                android:fontFamily="sans-serif-medium"
+                android:text="Click Event Title"/>
+
+        </LinearLayout>
+
+        <include layout="@layout/slidend"/>
+
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
+    
 </android.support.constraint.ConstraintLayout>
